[tool.poetry]
name = "scrapeghost"
version = "0.1.0"
description = ""
authors = ["Jonas Legion <jturbeaux@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipdb = "^0.13.13"
ipython = "^8.12.0"
notebook = "^6.5.4"
jupyterthemes = "^0.20.0"
scrapeghost = "^0.4.4"
openai = "^0.27.4"
Django = "4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
